--- a/css/style.css
+++ b/css/style.css
@@ -296,6 +296,7 @@ body {
 }
 .discover {
   margin-top: 120px;
+  margin-bottom: 120px;
   display: flex;
   border-radius: 16px;
   overflow: hidden;
@@ -322,4 +323,215 @@ body {
   font-size: 16px;
   line-height: 28px;
   color: #555555;
+}
+.swiper-slide-reviews {
+  display: flex;
+}
+.reviews-image {
+  width: 408px;
+  /* height: 100px; */
+  background: url(../img/reviews-image.jpg) no-repeat center / cover;
+}
+.reviews-content {
+  flex: 869px;
+}
+.reviews {
+  background: #fafafa;
+  border-radius: 16px;
+  overflow: hidden;
+  margin-bottom: 100px;
+}
+.reviews-content {
+  padding: 68px 132px 68px 109px;
+}
+.reviews-text {
+  font-size: 16px;
+  line-height: 28px;
+  color: #555555;
+}
+.reviews-title {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 28px;
+  color: #222222;
+  margin-bottom: 12px;
+  margin-left: 27px;
+}
+.reviews-subtitle {
+  font-size: 16px;
+  line-height: 28px;
+  color: #555555;
+  margin-left: 27px;
+}
+.swiper-rew {
+  position: relative;
+}
+.arrow-slider-prev {
+  cursor: pointer;
+  position: absolute;
+  top: 47%;
+  border: none;
+  z-index: 99;
+  border-radius: 50%;
+  /* width: 40px;
+  height: 40px; */
+  transform: rotate(180deg);
+}
+.arrow-slider-next {
+  position: absolute;
+  top: 47%;
+  right: 0;
+  border: none;
+  cursor: pointer;
+  z-index: 99;
+  border-radius: 50%;
+  /* width: 40px;
+  height: 40px; */
+}
+
+.arrow-slider-image-next {
+  border-radius: 50%;
+  background-color: #fff;
+  padding: 5px;
+}
+.arrow-slider-image-next:hover {
+  box-shadow: -4px 2px 7px rgba(0, 35, 20, 0.03);
+}
+.reviews-text-wrapper {
+  display: flex;
+  margin-bottom: 57px;
+}
+.right-marks {
+  display: flex;
+  align-items: end;
+}
+.swiper-slide-hotel {
+  text-align: center;
+}
+.hotels {
+  padding-bottom: 100px;
+}
+.map {
+  position: relative;
+  margin-bottom: 120px;
+}
+.mini-terget {
+  position: absolute;
+  left: 69.69%;
+  right: 28.2%;
+  top: 37.67%;
+  bottom: 58.35%;
+  height: 27px;
+  width: 27px;
+  background-color: #24ab70;
+  border-radius: 50%;
+}
+.middle-terget {
+  position: absolute;
+  left: 67.73%;
+  right: 26.25%;
+  top: 33.97%;
+  bottom: 54.65%;
+  background: rgba(36, 171, 112, 0.1);
+  border-radius: 50%;
+}
+.big-target {
+  position: absolute;
+  left: 64.84%;
+  right: 23.36%;
+  top: 28.51%;
+  bottom: 49.19%;
+  border-radius: 50%;
+  background: rgba(36, 171, 112, 0.1);
+}
+.location {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #fff;
+  border-radius: 16px;
+  bottom: 43px;
+  left: 3.36%;
+  right: 3.36%;
+  padding: 44px 66px;
+}
+.location-title {
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 40px;
+  color: #222222;
+}
+.location-description {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 28px;
+  color: #555555;
+  max-width: 510px;
+}
+.input-subscribe {
+  background: #fafafa;
+  border-radius: 50px;
+  padding-left: 24px;
+}
+.input {
+  background: transparent;
+  border: none;
+  max-width: 312px;
+}
+
+.input-button {
+  font-size: 14px;
+  line-height: 20px;
+  color: #ffffff;
+  padding: 16px 32px;
+  border-radius: 35px;
+  border: none;
+  background: #24ab70;
+  cursor: pointer;
+}
+.input-button:hover {
+  color: #24ab70;
+  background: rgba(36, 171, 112, 0.1);
+}
+.footer {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 63px;
+}
+.logo-description {
+  margin-top: 24px;
+  max-width: 264px;
+  margin-bottom: 34px;
+  font-size: 16px;
+  line-height: 24px;
+  color: #555555;
+}
+.socseti {
+  text-decoration: none;
+}
+.socseti:not(:first-child) {
+  margin-left: 30px;
+}
+.title-menu {
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 32px;
+  color: #222222;
+  margin: 0;
+  margin-bottom: 24px;
+}
+.footer-menu {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.footer-item:not(:last-child) {
+  margin-bottom: 16px;
+}
+.footer-link {
+  text-decoration: none;
+  font-size: 16px;
+  line-height: 24px;
+  color: #222222;
 }
