--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,14 @@ body {
   flex-basis: 50%;
   padding-top: 88px;
   padding-left: 60px;
+  min-height: 700px;
+}
+.hiro-image {
+  background: url("../img/hiro-bg.jpg") no-repeat;
+  background-size: cover;
+  /* <img src="img/hiro-bg.jpg" alt="" class="" /> */
+  display: flex;
+  flex-basis: 50%;
 }
 .hiro-title {
   font-weight: 600;
@@ -106,11 +114,12 @@ body {
   align-items: center;
   position: absolute;
   bottom: 10px;
-  left: 140px;
+  left: 3.36%;
+  right: 3.36%;
   background-color: #fff;
   box-shadow: 0px 22px 38px rgba(0, 34, 19, 0.08);
   border-radius: 280px;
-  min-width: 1000px;
+  /* min-width: 1000px; */
   background: #fff;
 }
 .search-option {
@@ -415,6 +424,9 @@ body {
   position: relative;
   margin-bottom: 120px;
 }
+.map-image {
+  max-width: 100%;
+}
 .mini-terget {
   position: absolute;
   left: 69.69%;
@@ -534,4 +546,262 @@ body {
   font-size: 16px;
   line-height: 24px;
   color: #222222;
+}
+
+@media (max-width: 1350px) {
+  body {
+    max-width: 95%;
+  }
+  .popular-card:not(:last-child) {
+    margin-right: 20px;
+  }
+}
+@media (max-width: 1300px) {
+  .hiro-title {
+    font-size: 60px;
+  }
+  .best {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .best-content {
+    display: flex;
+    margin: 0 auto;
+    text-align: center;
+    justify-content: center;
+  }
+  .button-best {
+    max-width: 100%;
+  }
+  .popular-subtitle {
+    max-width: 100%;
+  }
+}
+@media (max-width: 1250px) {
+  .hiro-title {
+    font-size: 50px;
+  }
+}
+@media (max-width: 1177px) {
+  .hiro-title {
+    font-size: 45px;
+  }
+  .discover-image {
+    width: 500px;
+  }
+  .card-image {
+    height: 250px;
+  }
+  .location {
+    padding: 22px 33px;
+  }
+  .location-title {
+    margin: 0;
+  }
+}
+@media (max-width: 1130px) {
+  .search-option {
+    padding: 0 10px;
+  }
+}
+@media (max-width: 1045px) {
+  .location {
+    flex-direction: column;
+  }
+  .location-title {
+    text-align: center;
+  }
+  .location-description {
+    text-align: center;
+  }
+}
+@media (max-width: 1024px) {
+  .reviews-image {
+    display: none;
+  }
+  .reviews-text-wrapper {
+    margin-bottom: 0;
+  }
+  .reviews-content {
+    padding: 34px 132px 34px 109px;
+  }
+  .discover-image {
+    width: 400px;
+  }
+}
+@media (max-width: 899px) {
+  .best-cards-wrapper {
+    grid-template-columns: 1fr 1fr;
+  }
+  .best-card {
+    width: 100%;
+  }
+}
+@media (max-width: 869px) {
+  .search-option {
+    padding: 0;
+  }
+  .button-search-wrapper {
+    padding: 16px 21px;
+  }
+  .card-image {
+    height: 200px;
+  }
+  .popular-description {
+    display: flex;
+    flex-direction: column;
+  }
+  .popular-rating {
+    border: none;
+  }
+  .popular-description {
+    margin: 0;
+  }
+  .popular-card-title {
+    text-align: center;
+    margin-bottom: 10px;
+  }
+  .popular-adress {
+    margin: 0;
+    text-align: center;
+  }
+  .popular-price {
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 848px) {
+  .discover {
+    display: flex;
+    flex-direction: column;
+  }
+  .discover-image {
+    width: 100%;
+  }
+  .hiro-title {
+    font-size: 40px;
+  }
+}
+@media (max-width: 724px) {
+  .hiro-panel {
+    flex-direction: column;
+    width: 150px;
+    right: 30%;
+    left: 70%;
+    bottom: 30%;
+  }
+  .search-option:not(:first-child) {
+    border-left: none;
+  }
+  .search-option {
+    padding: 10px;
+  }
+  .popular-cards-wrapper {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .popular-card:not(:last-child) {
+    margin-right: 0;
+  }
+  .card-image {
+    width: 100%;
+  }
+  .subtitle-panel {
+    flex-direction: column;
+  }
+  .popular-title {
+    text-align: center;
+  }
+  .button-light {
+    margin-top: 10px;
+  }
+  .popular-adress {
+    margin-top: 10px;
+  }
+}
+@media (max-width: 622px) {
+  .reviews-content {
+    padding: 17px 30px 17px 30px;
+  }
+  .footer {
+    flex-direction: column;
+  }
+  .logo-block {
+    margin: 0;
+    text-align: center;
+  }
+  .footer-menu {
+    text-align: center;
+  }
+  .title-menu {
+    margin-top: 30px;
+  }
+  .logo {
+    display: block;
+  }
+  .hiro-block {
+    flex-direction: column;
+  }
+  .hiro-panel {
+    display: none;
+  }
+  .hiro-content {
+    padding: 0;
+    text-align: center;
+    min-height: 100%;
+  }
+  .logo-description {
+    min-width: 100%;
+  }
+}
+@media (max-width: 600px) {
+  .location {
+    padding: 11px 16px;
+  }
+  .location-title {
+    font-weight: 600;
+    font-size: 24px;
+  }
+  .location {
+    position: relative;
+    background: #fafafa;
+  }
+}
+@media (max-width: 420px) {
+  .hiro-title {
+    font-size: 30px;
+    line-height: 40px;
+  }
+  .popular-title {
+    font-size: 24px;
+    line-height: 30px;
+  }
+  .discover-title {
+    font-size: 24px;
+    line-height: 30px;
+  }
+  .discover-content {
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 30px;
+  }
+  .popular {
+    margin-top: 60px;
+  }
+  .best {
+    margin-top: 70px;
+  }
+  .discover {
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+  .reviews {
+    margin-bottom: 50px;
+  }
+  .hotels {
+    padding-bottom: 50px;
+  }
+  .map {
+    margin-bottom: 60px;
+  }
 }
