--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,12 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+.menu-button {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  display: none;
+}
 .logo {
   display: flex;
   align-items: center;
@@ -78,6 +84,7 @@ body {
   /* <img src="img/hiro-bg.jpg" alt="" class="" /> */
   display: flex;
   flex-basis: 50%;
+  border-radius: 0 50px 0 0;
 }
 .hiro-title {
   font-weight: 600;
@@ -547,7 +554,9 @@ body {
   line-height: 24px;
   color: #222222;
 }
-
+.close-button {
+  display: none;
+}
 @media (max-width: 1350px) {
   body {
     max-width: 95%;
@@ -680,6 +689,49 @@ body {
   }
   .hiro-title {
     font-size: 40px;
+  }
+  .menu-button {
+    display: block;
+  }
+  .navbar {
+    position: fixed;
+    flex-direction: column;
+    left: 0;
+    top: 0;
+    width: 100%;
+    padding: 50px;
+    /* height: 100%; */
+    background-color: rgba(255, 255, 255, 0.95);
+    transform: translateY(-100%);
+    transition: transform 0.2s;
+    z-index: 1;
+    justify-content: start;
+  }
+  .is-open {
+    transform: translateX(0);
+  }
+  .close-button {
+    display: block;
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    font-size: 30px;
+    text-decoration: none;
+    color: #24ab70;
+  }
+  .menu {
+    flex-direction: column;
+    padding: 0;
+    text-align: center;
+  }
+  .menu-item:not(:last-child) {
+    margin-right: 0;
+  }
+  .menu-item {
+    margin-bottom: 20px;
+  }
+  .menu-link {
+    font-size: 18px;
   }
 }
 @media (max-width: 724px) {
